[package]
name = "terrustaria"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = {version = "0.9.1", features = ["dynamic"]}
bevy_ecs_tilemap = "0.9.0"
rand = "0.8.4"
bevy_rapier2d = {version = "0.19.0", features = ["debug-render"]}
bevy-inspector-egui = "0.15.0"
webbrowser = "0.8.6"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

